<resources>
    <string name="app_name">GreatKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">username</string>
    <string name="yourUsername">Your username</string>
    <string name="fullName">Full name</string>
    <string name="yourName">Your name</string>
    <string name="email">Email</string>
    <string name="yourEmail">Your Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="yourPassword">Your Password</string>
    <string name="address">Address</string>
    <string name="yourAddress">Your Address</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>