<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:layout_marginStart="20dp"
    android:layout_gravity="center"
    android:layout_marginEnd="20dp"
    android:background="@drawable/custome_login_box"
    tools:context=".ui.fragments.popup.RegisterDialogFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/outerLinear">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginVertical="30dp"
            android:layout_marginBottom="30dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/newaccount"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="image register"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="11sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginStart="10sp"
                    android:background="@drawable/line_spacing"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yourUsername"
                        android:textColor="@android:color/darker_gray"/>
                    <EditText
                        android:id="@+id/username"
                        android:labelFor="@id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@drawable/custome_edittext"
                        android:drawableStart="@drawable/baseline_person_24"
                        android:drawableTint="@android:color/darker_gray"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:hint="@string/username"
                        android:autofillHints="username"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fullName"
                        android:textColor="@android:color/darker_gray"/>
                    <EditText
                        android:id="@+id/fullName"
                        android:labelFor="@id/fullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fullName"
                        android:padding="10dp"
                        android:background="@drawable/custome_edittext"
                        android:drawableStart="@drawable/baseline_person_24"
                        android:drawableTint="@android:color/darker_gray"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:autofillHints="name"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yourEmail"
                        android:textColor="@android:color/darker_gray"/>
                    <EditText
                        android:id="@+id/email"
                        android:labelFor="@id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:padding="10dp"
                        android:background="@drawable/custome_edittext"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawableTint="@android:color/darker_gray"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yourAddress"
                        android:textColor="@android:color/darker_gray"/>
                    <EditText
                        android:id="@+id/address"
                        android:labelFor="@id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:padding="10dp"
                        android:background="@drawable/custome_edittext"
                        android:drawableStart="@drawable/baseline_location_pin_24"
                        android:drawableTint="@android:color/darker_gray"
                        android:drawablePadding="10dp"
                        android:autofillHints="postalAddress"
                        android:inputType="text"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yourPassword"
                        android:textColor="@android:color/darker_gray"/>
                    <EditText
                        android:id="@+id/passwordRegister"
                        android:labelFor="@id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:padding="10dp"
                        android:background="@drawable/custome_edittext"
                        android:drawableStart="@drawable/baseline_lock_outline_24"
                        android:drawableTint="@android:color/darker_gray"
                        android:drawablePadding="10dp"
                        android:autofillHints="password"
                        android:inputType="textPassword"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmPassword"
                        android:textColor="@android:color/darker_gray"/>
                    <EditText
                        android:id="@+id/confirmPassword"
                        android:labelFor="@id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:padding="10dp"
                        android:background="@drawable/custome_edittext"
                        android:drawableStart="@drawable/baseline_lock_outline_24"
                        android:drawableTint="@android:color/darker_gray"
                        android:drawablePadding="10dp"
                        android:autofillHints="password"
                        android:inputType="textPassword"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:baselineAligned="false"
        android:layout_marginTop="600dp">
        <LinearLayout
            style="@style/Theme.GreatKotlin2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1">
            <com.google.android.material.button.MaterialButton
                style="@style/Theme.GreatKotlin2"
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:backgroundTint="@android:color/darker_gray"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1">
            <com.google.android.material.button.MaterialButton
                style="@style/Theme.GreatKotlin2"
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>